--- a/12-monochrome-patterns2.html
+++ b/12-monochrome-patterns2.html
@@ -12,10 +12,11 @@
 </html>
 <script type="text/javascript" src="P10.js"></script>
 <script>
-  function makeSvgDownloadable(svgElem, name) {
-    svgElem.download = name + '.svg';
+
+  function makeSvgDownloadable(domElem,svgElem, svgFilename) {
     xml = (new XMLSerializer()).serializeToString(svgElem);
-    svgElem.href = 'data:application/octet-stream;base64,' + btoa(xml);
+    domElem.href = 'data:application/octet-stream;base64,' + btoa(xml);
+    domElem.download = svgFilename + '.svg';
   }
 
   Math.guid = function () {
@@ -33,13 +34,14 @@
     let draw = SVG(el.id)
     draw.size(50, 50)
     draw.rect(50, 50)
-    draw.fill(P10[patternName](draw, strokeColor, i))
+    draw.fill(P10[patternName](draw, backColor,strokeColor, i))
 
-    makeSvgDownloadable(el, patternName + "_" + i)
+    makeSvgDownloadable(el, draw.node, patternName + "_" + i)
   }
 
   //console.log("p10",P10)
-  let backColor = "#ffffaa"
+  //let backColor = "#ffffaa"
+  let backColor = ""
   //let strokeColor='#000000'
   //let strokeColor = "#f06"
   let strokeColor = "#555"
