fix incorrent default background color

--- a/12-monochrome-patterns2.html
+++ b/12-monochrome-patterns2.html
@@ -31,7 +31,7 @@
     <tbody>
       <tr>
         <td><input type="color" id="strokeColor" value="#555555"><button id="strokeReset">reset</button><button id="strokeRand">randomize</button></td>
-        <td><input type="checkbox" id="backEnabled"><input type="color" id="backColor" value="550000"><button id="backReset">reset</button><button id="backRand">randomize</button></td>
+        <td><input type="checkbox" id="backEnabled"><input type="color" id="backColor" value="#550000"><button id="backReset">reset</button><button id="backRand">randomize</button></td>
         <td><input id="rotationNumber" style="width:4em" type="number" min="0" max="100" step="1" value="0" list="rotationNumbers"><button id="rotationReset">reset</button></td>
         <td><input id="sizeNumber" style="width:4em" type="number" min="10" max="100" step="1" value="10" ><button id="sizeReset">reset</button></td>
         <td><button id="generate" onclick="redraw()">Generate</button></td>
